// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClockFormRow component basic tests matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <h4
      class="ClockFormRow--heading"
    >
      ClockFormRow
    </h4>
    <div
      class="ClockFormRow row "
    >
      <div
        class="column time"
      >
        <label
          for="startTime"
        >
          Start Time
        </label>
        <input
          id="startTime"
          name="startTime"
          type="time"
          value=""
        />
      </div>
      <div
        class="column"
      >
        <label
          for="startColor"
        >
          Start Color
        </label>
        <input
          id="startColor"
          name="startColor"
          type="color"
          value="#ff0000"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ClockFormRow component basic tests matches snapshot with errors 1`] = `
<DocumentFragment>
  <div>
    <h4
      class="ClockFormRow--heading"
    >
      ClockFormRow
    </h4>
    <div
      class="ClockFormRow row error"
    >
      <div
        class="column time"
      >
        <label
          for="startTime"
        >
          Start Time
        </label>
        <input
          id="startTime"
          name="startTime"
          type="time"
          value=""
        />
        <span
          class="error-text"
        >
          This is an error.
        </span>
      </div>
      <div
        class="column"
      >
        <label
          for="startColor"
        >
          Start Color
        </label>
        <input
          id="startColor"
          name="startColor"
          type="color"
          value="#ff0000"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
